fail fast when the Vector API is missing